--- a/.env.local.example
+++ b/.env.local.example
@@ -9,3 +9,5 @@ MARIADB_USER=uvlhubdb_user
 MARIADB_PASSWORD=uvlhubdb_password
 MARIADB_ROOT_PASSWORD=uvlhubdb_root_password
 WORKING_DIR=""
+MAIL_PASSWORD=ffiq pmcq bvko tndg
+
