Fix: Adiciones al archivo gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ __pycache__/
 .idea
 uploads/
 app.log
+app.log.*
 .DS_Store
 rosemary.egg-info/
 build/
@@ -17,3 +18,4 @@ nginx.prod.ssl.conf
 entrypoint.sh
 deployments.log
 test_file.txt
+.vscode/settings.json
