Fix: changes in migrations workflow
The workflow has been updated to check only in develop as it has been decided to unprotect this branch for the workflow to work.

--- a/.github/workflows/migrations.yml
+++ b/.github/workflows/migrations.yml
@@ -2,9 +2,9 @@ name: Run Migrations
 
 on:
   push:
-    branches: [main, develop]
+    branches: [develop]
   pull_request:
-    branches: [main, develop]
+    branches: [develop]
 
 jobs:
   migrations:
