Fix: Configuring env variables and github actions

--- a/.env.local.example
+++ b/.env.local.example
@@ -10,4 +10,4 @@ MARIADB_PASSWORD=uvlhubdb_password
 MARIADB_ROOT_PASSWORD=uvlhubdb_root_password
 WORKING_DIR=""
 MAIL_PASSWORD=ffiq pmcq bvko tndg
-
+SECRET_KEY=secret_key
