--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -49,6 +49,8 @@ jobs:
         MARIADB_TEST_DATABASE: uvlhubdb_test
         MARIADB_USER: uvlhub_user
         MARIADB_PASSWORD: uvlhub_password
+        MAIL_PASSWORD: ffiq pmcq bvko tndg
+        SECRET_KEY: secret_key
       run: |
         pytest app/modules/ --ignore-glob='*selenium*'
 
