--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -70,3 +70,5 @@ jobs:
         MARIADB_USER: uvlhub_user
         MARIADB_PASSWORD: uvlhub_password
         CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        MAIL_PASSWORD: ffiq pmcq bvko tndg
+        SECRET_KEY: secret_key
