--- a/requirements.txt
+++ b/requirements.txt
@@ -99,3 +99,9 @@ WTForms==3.1.2
 zope.event==5.0
 zope.interface==6.4.post2
 zstandard==0.22.0
+contourpy==1.3.1
+fonttools==4.55.3
+kiwisolver==1.4.7
+matplotlib==3.9.3
+numpy==2.2.0
+pillow==11.0.0
