--- a/.env.docker.example
+++ b/.env.docker.example
@@ -9,3 +9,5 @@ MARIADB_USER=uvlhubdb_user
 MARIADB_PASSWORD=uvlhubdb_password
 MARIADB_ROOT_PASSWORD=uvlhubdb_root_password
 WORKING_DIR=/app/
+MAIL_PASSWORD=ffiq pmcq bvko tndg
+SECRET_KEY=secret_key
