Fix: Add missing discord token

--- a/.env.local.example
+++ b/.env.local.example
@@ -11,3 +11,4 @@ MARIADB_ROOT_PASSWORD=uvlhubdb_root_password
 WORKING_DIR=""
 MAIL_PASSWORD=ffiq pmcq bvko tndg
 SECRET_KEY=secret_key
+DISCORD_TOKEN=MTMxNjE3ODE1MjA3MDA1Mzg4OA.GH81xz.ETt-8RGiVEyV235N3S7ulb2Niy4cHsK_yjF29U
