Fix: Added discord bot token to docker and vagrant .env

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -9,3 +9,4 @@ MARIADB_USER=uvlhubdb_user
 MARIADB_PASSWORD=uvlhubdb_password
 MARIADB_ROOT_PASSWORD=uvlhubdb_root_password
 WORKING_DIR=/app/
+DISCORD_TOKEN=MTMxNjE3ODE1MjA3MDA1Mzg4OA.GH81xz.ETt-8RGiVEyV235N3S7ulb2Niy4cHsK_yjF29U
